[package]
name = "pop_pop_ret"
version = "0.1.0"
authors = ["Neowutran <me@neowutran.ovh>"]

[dependencies]
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
regex = "1.0"
docopt = "0.8"
glob = "0.2"
threadpool = "1.7"
#chrono = "0.4"
num_cpus = "1"
